# mhsanaei-3x-ui-offline-installer

./: Cargo.toml  README.md  README_FA.md
.github/workflows/: release.yml
src/: main.rs  proxy.rs  resume.rs
src/downloader/: mod.rs  packages.rs  ssl.rs  xui.rs
src/generator/: bundle.rs  mod.rs  script.rs
src/wizard/: questions.rs  state.rs
xui-offline-builder/: README.md
xui-offline-builder/src/: manifest.rs  os_detect.rs  resume.rs
xui-offline-builder/src/downloader/: mod.rs  packages.rs  xui.rs
xui-offline-builder/src/ui/: prompt.rs
xui-offline-builder/src/wizard/: mod.rs  questions.rs  state.rs
