[package]
name = "xui-offline-builder"
version = "0.1.0"
edition = "2021"
description = "3x-ui Offline Install Bundle Builder"

[[bin]]
name = "xui-offline-builder"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
reqwest        = { version = "0.12", features = ["stream", "json", "socks"] }
indicatif      = { version = "0.17", features = ["tokio"] }
dialoguer      = "0.11"
console        = "0.15"
rcgen          = "0.13"
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
futures-util   = "0.3"
rand           = "0.8"
sha2           = "0.10"
hex            = "0.4"
chrono         = { version = "0.4",  features = ["serde"] }
tar            = "0.4"
flate2         = "1.0"
